--- a/automator/tasks/radio_alarm/config.json
+++ b/automator/tasks/radio_alarm/config.json
@@ -1,3 +1,12 @@
 {
-    "bluetooth_mac_address": "EC:81:93:F8:23:2B"
+    "bluetooth_devices": [
+        {
+            "name": "Carbonara Bedroom Speaker Logitech",
+            "mac_address": "EC:81:93:F8:23:2B"
+        },
+        {
+            "name": "Office Headphones",
+            "mac_address": "68:59:37:14:58:d7"
+        }
+    ]
 }
