Added freebuds se2 mac address

--- a/automator/tasks/radio_alarm/config.json
+++ b/automator/tasks/radio_alarm/config.json
@@ -7,6 +7,10 @@
         {
             "name": "Office Headphones",
             "mac_address": "68:59:37:14:58:d7"
+        },
+        {
+            "name": "FreeBuds SE2 Corato",
+            "mac_address": "BC:7F:7B:76:E1:15"
         }
     ]
 }
