--- a/automator/tasks/sleep_sounds/config.json
+++ b/automator/tasks/sleep_sounds/config.json
@@ -1,5 +1,9 @@
 {
-    "start_time": "00:00",
     "stop_time": "03:00",
-    "bluetooth_mac_address": "EC:81:93:F8:23:2B"
+    "bluetooth_devices": [
+      {
+        "name": "Carbonara Bedroom Speaker Logitech",
+        "mac_address": "EC:81:93:F8:23:2B"
+      }
+    ]
 }
